envoy-demo.yaml
static_resources:

  listeners:
    - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
        port_value: 10000
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
              - name: local_service
                  domains: ["*"]
                  routes:
                    - match:
                        prefix: "/"
                  route:
                    cluster: service
        http_filters:
          - name: cache_b
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.cache_b.v3.CacheFilterConfig
          - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                http2_protocol_options: {}
  clusters:
    - name: service
        connect_timeout: 1s
        type: logical_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
